[package]
name = "data-vis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
textplots = "0.6"


[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
